# Freedom-Launcher

./: .gitattributes  LICENSE  README.md  README.ru.md  splash.html
Main_App/: .taurignore  package-lock.json  package.json  vite.config.ts
Main_App/src/: LanguageContext.tsx  ThemeContext.tsx  index.css  indexedDB.ts  theme.ts
Main_App/src-tauri/: tauri.conf.json
Main_App/src-tauri/src/: disks.rs  torrent_parse.rs
Main_App/src/components/: CustomTitleBar.tsx
Main_App/src/components/CSS/: BottomMenu.css
Main_App/src/components/Menus-And-Sidebars/: BottomMenu.tsx  BottomMenuContext.tsx  HexagonalMenu.tsx  Sidebar.tsx
Main_App/src/components/Modals/: BackgroundModal.tsx
Main_App/src/components/Notifications/: FirstShortcutNotification.tsx
Main_App/src/locales/en/: translation.json
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs  python_anal.rs
src/components/: SplashAnimation.tsx
src/components/CSS/: CustomTitleBar.css  RightSidebar.css
src/components/Menus-And-Sidebars/: RightSidebar.tsx
src/components/Modals/: ImageSettingsModal.tsx
src/components/Notifications/: DelteteShorcutNotification.tsx  SaveShortcutNotification.tsx
src/pages/Applications/: CardDetail.tsx  DownloadSetting.tsx  GameSearch.tsx  Notification.tsx
src/pages/DiskAnalysis/: DiskUsageChart.tsx  ModalDisk.tsx
src/pages/Downloads/: Downloads.tsx
src/pages/Home/: CardDetail.tsx  Notifications.tsx
src/pages/Monitoring/: Monitoring.tsx  ProcessesModal.tsx
src/pages/Settings/: Settings.tsx
src/pages/in_work/: InWork.tsx
(+21 files in other folders)
