[package]
name = "freedom"
version = "0.1.0"
description = "Freedom all over the world"
authors = ["Ar3love"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.7.1", features = [ "api-all"] }

lmdb = "0.8.0" 
once_cell = "1.17"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

lazy_static = "1.4"
winres = "0.1"

sysinfo = "0.30.13"
tempfile = "3.3"
image = "0.24.6"
winapi = { version = "0.3", features = ["winuser", "wingdi", "windef", "winbase"] }

tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.12", features = ["json" , "blocking"] }
scraper = { version = "0.20"}
regex = "1.5"

walkdir = "2.3.2" 




[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
